Fixed overlapping of a Case content and the header

--- a/src/uibook.css
+++ b/src/uibook.css
@@ -22,6 +22,7 @@
 }
 
 .uibook-container {
+  position: relative;
   padding: 10px 0;
   z-index: 1;
   border: 0 solid #55d53e;
